# hobgoblin

./: CHANGELOG.md  CMakeLists.txt  MANUAL.md  README.md
assets/meshpack/: example.meshbin  example.meta.json
assets/models/: example.blend
docs/: MANUAL.md
engine/render/: CMakeLists.txt
engine/render/include/hobgoblin/render/: mesh.hpp  meshbin.hpp
engine/render/src/: mesh.cpp
licenses/: cgltf_LICENSE.txt  hb_LICENSE.txt  spdlog_LICENSE.txt
tools/meshpack/: CMakeLists.txt  meshpack_lib.cpp  meshpack_lib.hpp
